syntax = "proto3";

option csharp_namespace = "OrderGrpcService";

package greet;

message Order {
  int64 price = 1;
}

// The greeting service definition.
service OrderService {
  // Sends a greeting
  rpc GetOrders(GetOrdersResponse) returns (GetOrdersResponse);
}

message GetOrdersResponse {
  repeated Order orders = 1;
}
